user.css
/* ... */
.os-content {
  margin-left: 6%;
  width: 94% !important;
}

/* playlist sidebar */

.main-rootlist-rootlist .os-content {
  padding: 0px 0px !important;
}

.main-rootlist-rootlist {
  --left-sidebar-item-height: 48px;
  --left-sidebar-padding-left: 18px;
  --left-sidebar-padding-right: 18px;
  padding-bottom: 120px;  /* don't go below player controls */
}

.main-rootlist-rootlistItemLink {
  padding: 8px;
}

.main-rootlist-rootlistItemLink:link,
.main-rootlist-rootlistItemLink:visited,
.main-rootlist-rootlistPlaylistHeader {
  color: var(--spice-text);
  background-color: var(--spice-card);
  background-size: cover;
  border-radius: var(--border-radius-2);
  cursor: pointer;
}

.main-rootlist-rootlistItemLink:not(:last-child) {
  margin-bottom: 8px;
}

.main-rootlist-textWrapper {
  display: none;
}


.main-rootlist-statusIcons {
  right: 17px !important;
  top: -4px;
}

.main-rootlist-expandArrow {
  color: var(--spice-text);
  position: relative;
  margin-inline-start: -16px;
  right: -6px;
  top: 16px;
  height: 16px;
  transform: rotate(-90deg);
}

.main-rootlist-expandArrow.qAAhQw9dXNB7DbPgDDxy {
  transform: rotate(0deg);
}

.main-rootlist-statusIcons {
  margin-inline-start: -24px;
  position: relative;
  right: 8px;
}

.main-rootlist-rootlistItemLink:hover,
.main-createPlaylistButton-button:hover,
.main-collectionLinkButton-collectionLinkButton:hover {
  filter: brightness(50%);
}

.main-rootlist-statusIcons>button {
  color: var(--spice-text);
}

.main-rootlist-rootlistItemLinkActive~.main-rootlist-statusIcons>button {
  color: var(--spice-shadow);
}

/* tracklist */

.main-trackList-indexable .main-virtualScrollList-wrapper,
.main-trackList-indexable .main-rootlist-wrapper {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-2);
  padding: 8px;
}

.main-trackList-indexable {
  padding: 8px;
  padding-bottom: 24px;
}

.main-trackList-trackListHeader.g9n_9K5pFI3B_JuDI_hS {
  padding: 0px;
  margin: 0px;
  border-bottom: none;
  background: var(--spice-card);
}

.main-trackList-trackListRow {
  border-radius: var(--border-radius-2);
}

.main-trackList-trackListRow:hover {
  background-color: rgba(var(--spice-rgb-selected-row), .05);
}

.main-trackList-trackListRow:active {
  background-color: rgba(var(--spice-rgb-selected-row), .1);
}

.main-trackList-trackListRow.main-trackList-selected,
.main-trackList-trackListRow.main-trackList-selected:hover {
  background-color: var(--spice-selected-row);
}

.main-trackList-trackListRow.main-trackList-selected .main-tag-container,
.main-trackList-trackListRow.main-trackList-selected:hover .main-tag-container,
.main-trackList-trackListRow.main-trackList-selected:active .main-tag-container,
.main-trackList-trackListRow.main-trackList-selected:focus .main-tag-container {
  color: var(--spice-text) !important;
  background-color: var(--spice-shadow);
}

.main-tag-container,
.main-trackList-rowImage {
  border-radius: var(--border-radius-3);
}

.main-trackList-rowTitle {
  color: var(--spice-text) !important;
}

.main-trackList-trackListRow.main-trackList-selected span,
.main-trackList-trackListRow.main-trackList-selected:hover span,
.main-trackList-trackListRow.main-trackList-selected:active span,
.main-trackList-trackListRow.main-trackList-selected:focus span,
.main-trackList-trackListRow.main-trackList-selected a,
.main-trackList-trackListRow.main-trackList-selected:hover a,
.main-trackList-trackListRow.main-trackList-selected:active a,
.main-trackList-trackListRow.main-trackList-selected:focus a,
.main-trackList-trackListRow.main-trackList-selected button,
.main-trackList-trackListRow.main-trackList-selected:hover button,
.main-trackList-trackListRow.main-trackList-selected:active button,
.main-trackList-trackListRow.main-trackList-selected:focus button,
.main-trackList-trackListRow.main-trackList-selected div,
.main-trackList-trackListRow.main-trackList-selected:hover div,
.main-trackList-trackListRow.main-trackList-selected:active div,
.main-trackList-trackListRow.main-trackList-selected:focus div {
  color: var(--spice-text) !important;
}

.main-trackList-trackListHeader {
  margin-bottom: 8px;
}

._110dbc41d89af63f97cdd8b7cd7fea47-scss {
  border: 1px solid var(--spice-text);
}

.main-trackList-trackListRow.main-trackList-selected ._110dbc41d89af63f97cdd8b7cd7fea47-scss,
.main-trackList-trackListRow.main-trackList-selected:hover ._110dbc41d89af63f97cdd8b7cd7fea47-scss,
.main-trackList-trackListRow.main-trackList-selected:active ._110dbc41d89af63f97cdd8b7cd7fea47-scss,
.main-trackList-trackListRow.main-trackList-selected:focus ._110dbc41d89af63f97cdd8b7cd7fea47-scss,
.main-trackList-trackListRow.main-trackList-selected .main-button-outlined {
  border: 1px solid var(--spice-text);
}

.main-trackList-trackListHeaderStuck.main-trackList-trackListHeader {
  border-bottom: none;
  background: none;
  margin: auto;
  padding: 0;
}

.main-trackList-statusChangeUp {
  color: var(--green);
}
/* ... */

